hadoop almost finished. added dacostarepublic download urls.